v0.5.0/_sources/projections/azim/azim_lambert.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/azim/azim_lambert.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_azim_azim_lambert.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_azim_azim_lambert.py:


Lambert Azimuthal Equal Area
============================

This projection was developed by Johann Heinrich Lambert in 1772 and is
typically used for mapping large regions like continents and hemispheres. It is
an azimuthal, equal-area projection, but is not perspective. Distortion is zero
at the center of the projection, and increases radially away from this point.

**a**\ *lon0/lat0*\ [*/horizon*\ ]\ */scale*
or **A**\ *lon0/lat0*\ [*/horizon*\ ]\ */width*

**a** or **A** specifies the projection type, and *lon0/lat0* specifies the
projection center, *horizon* specifies the maximum distance from projection
center (in degrees, <= 180, default 90), and *scale* or *width* sets the size
of the figure.

.. GENERATED FROM PYTHON SOURCE LINES 18-23



.. image-sg:: /projections/azim/images/sphx_glr_azim_lambert_001.png
   :alt: azim lambert
   :srcset: /projections/azim/images/sphx_glr_azim_lambert_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    fig.coast(region="g", frame="afg", land="gray", projection="A30/-20/60/12c")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.970 seconds)


.. _sphx_glr_download_projections_azim_azim_lambert.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: azim_lambert.py <azim_lambert.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: azim_lambert.ipynb <azim_lambert.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
